fix flickering when page reloads

--- a/src/components/Themes/Themes.css
+++ b/src/components/Themes/Themes.css
@@ -49,8 +49,6 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
 
 .slider:before {
@@ -61,9 +59,6 @@
   left: 3px;
   bottom: 3px;
   background-color: white;
-  will-change: transform;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
 
 .slider.round {
